Adding CSS Pricing Table Project

--- a/CSS/Web Design Agency Project/style.css
+++ b/CSS/Web Design Agency Project/style.css
@@ -61,7 +61,7 @@ footer {
   .card img {
     margin-bottom: 10px;
     width: 100%;
-    display: inline;
+    /* display: inline; */
     object-fit: cover;
   }
 }
